--- a/frontend/themes/vaadinmeetupdemo/views/hello-world-view.css
+++ b/frontend/themes/vaadinmeetupdemo/views/hello-world-view.css
@@ -1,3 +1,3 @@
-vaadin-button.button-light-orange {
-    background-color: lightsalmon;
+vaadin-button.button-light-blue {
+    background-color: dodgerblue;
 }
